sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:26: error: illegal start of simple expression
	}	while(/*(c1|c2)!=0*/)
                                    ^AlgCocktailSort2:27: error: ')' expected but '}' found.
}
^